--- a/404.html
+++ b/404.html
@@ -136,10 +136,9 @@
     </div>
     <div class="footer">
         <p>Join Community</p>
-        <a href="https://t.me/gilton_official"><i class="fab fa-telegram icon"></i></a>
-        <a href="https://x.com/gilton_official"><i class="fab fa-twitter icon"></i></a>
-        <a href="https://github.com/gilton-labs"><i class="fab fa-github icon"></i></a>
-        <a href="mailto:dev@gilton.win"><i class="fas fa-envelope icon"></i></a>
+        <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
+        <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
+        <a href="https://github.com/gilton-win"><i class="fab fa-github icon"></i></a>
     </div>
 </body>
 </html>
