--- a/404.html
+++ b/404.html
@@ -126,8 +126,8 @@
 <body>
     <div class="header">
         <a href="/"><i class="fas fa-home icon"></i></a>
-        <a href="#"><i class="fas fa-exchange icon"></i></a>
-        <a href="#"><i class="fas fa-info icon"></i></a>
+        <!--<a href="#"><i class="fas fa-exchange icon"></i></a>
+        <a href="#"><i class="fas fa-info icon"></i></a>-->
     </div>
     <div class="center">
         <h1>404 Page Not Found</h1>
