--- a/terms/index.html
+++ b/terms/index.html
@@ -170,7 +170,7 @@
     </div>
 
     <div class="footer">
-        <p><a href="/tokenomics" id="linkline">Tokenomics</a></p>
+        <p><a href="/tokenomics" id="linkline class="link-3">Tokenomics</a></p>
         <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
     </div>
 </body>
