--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -112,7 +112,7 @@
 
     <div class="content">
         <div class="tokenomics-wrapper">
-            <h1 class="tokenomics-title">Tokenomics of GILTON</h1>
+            <h1 class="tokenomics-title">Plan Tokenomics of GILTON</h1>
 
             <section class="tokenomics-section">
                 <h2>1. Information</h2>
