--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -1,1 +1,64 @@
-x
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tokenomics</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="header">
+        <a href="/"><i class="fas fa-home icon"></i></a>
+        <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
+        <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
+    </div>
+
+    <div class="content">
+        <div class="page-wrapper">
+            <h1 class="page-title">Plan Tokenomics of GILTON</h1>
+
+            <section class="page-section">
+                <h2>1. Information</h2>
+                <p>
+                    - Name = GILTON
+                </p>
+                <p>
+                    - Symbol = GTN
+                </p>
+                <p>
+                    - Total Supply = 10 Millions
+                </p>
+            </section>
+
+            <section class="page-section">
+                <h2>2. Distribution</h2>
+                <p>
+                    - 10% Liquidity
+                </p>
+                <p>
+                    - 10% Token Lock Dev (1 Year)
+                </p>
+                <p>
+                    - 80% Token Lock Community Event (every 1 month unlock)
+                </p>
+            </section>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p><a href="/tokenomics" id="linkline" class="link-3">Tokenomics</a></p>
+        <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
