--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -48,7 +48,7 @@
                     - 10% Token Lock Dev (1 Year)
                 </p>
                 <p>
-                    - 80% Token Lock Community Event (every 1 month unlock)
+                    - 80% Token Lock Community Event
                 </p>
             </section>
         </div>
