--- a/404.html
+++ b/404.html
@@ -126,8 +126,8 @@
 <body>
     <div class="header">
         <a href="/"><i class="fas fa-home icon"></i></a>
-        <!--<a href="#"><i class="fas fa-exchange icon"></i></a>
-        <a href="#"><i class="fas fa-info icon"></i></a>-->
+        <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
+        <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
     </div>
     <div class="center">
         <h1>404 Page Not Found</h1>
@@ -135,10 +135,8 @@
         <p>Please check the URL or go back to the home page.</p>
     </div>
     <div class="footer">
-        <p>Join Community</p>
-        <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
-        <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
-        <a href="https://github.com/gilton-win"><i class="fab fa-github icon"></i></a>
+        <p><a href="/tokenomics" id="linkline" class="link-3">Tokenomics</a></p>
+        <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
     </div>
 </body>
 </html>
