--- a/404.html
+++ b/404.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Page Not Found</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -8,120 +11,9 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta charset="UTF-8">
-    <title>404 Page Not Found</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            background: #1c1c1c;
-            color: #ffffff;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #000000;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            padding: 10px 0;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-        }
-
-        .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: #000000;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            padding: 10px 0;
-            box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-        }
-
-        .icon {
-            color: #ffffff;
-            text-decoration: none;
-            background: #2c3e50;
-            border-radius: 50%;
-            padding: 10px;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: transform 0.3s, background 0.3s;
-        }
-
-        .icon:hover {
-            background: #1abc9c;
-            transform: scale(1.2);
-        }
-
-        @media (max-width: 480px) {
-            .icon {
-                padding: 8px;
-                width: 35px;
-                height: 35px;
-                font-size: 1.2rem;
-            }
-        }
-
-        .content {
-            text-align: center;
-            flex-grow: 1;
-            padding-top: 60px;
-            padding-bottom: 60px;
-            animation: slideIn 1s ease-out;
-        }
-
-        @keyframes slideIn {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .spinner {
-            border: 6px solid rgba(255, 255, 255, 0.1);
-            border-top: 6px solid #ffffff;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-            margin: 20px auto;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/404/styles.css">
 </head>
 <body>
     <div class="header">
@@ -129,14 +21,19 @@
         <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
         <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
     </div>
-    <div class="center">
-        <h1>404 Page Not Found</h1>
-        <!--<div class="spinner"></div>-->
-        <p>Please check the URL or go back to the home page.</p>
+
+    <div class="content">
+        <div class="page-wrapper">
+            <h1 class="page-title">404 Page Not Found</h1>
+            <h2 class="page-title">Please check the URL or go back to the <a href="/" id="linkline" class="link-3">home</a></h2>
+        </div>
     </div>
+
     <div class="footer">
         <p><a href="/tokenomics" id="linkline" class="link-3">Tokenomics</a></p>
         <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
     </div>
+
+    <script src="/404/script.js"></script>
 </body>
 </html>
