--- a/terms/index.html
+++ b/terms/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header">
         <a href="/"><i class="fas fa-home icon"></i></a>
-        <a href="https://t.me/gilton_win"><i class="fab fa-telegram icon"></i></a>
+        <a href="#"><i class="fab fa-discord icon"></i></a>
         <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
     </div>
 
