--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <div class="spinner"></div>
     </div>
     <div class="footer">
-        <p><a href="/tokenomics" id="linkline" class="link-3">Tokenomics</a></p>
-        <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
+        <p><a href="/#" id="linkline" class="link-3">Tokenomics</a></p>
+        <p><a href="/#" id="linkline" class="link-3">Terms</a></p>
     </div>
 </body>
 </html>
