Update social media links to include target attributes

--- a/404.html
+++ b/404.html
@@ -448,16 +448,16 @@
                 <h3>Connect With Us</h3>
                 <p style="margin-bottom: 15px; font-size: 0.9rem; color: #a0a0a0;">Join our community</p>
                 <div class="footer-social">
-                    <a href="https://x.com/gilton_win" target="_blank" rel="noopener noreferrer" title="Twitter" aria-label="Twitter">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Twitter" aria-label="Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" title="Discord" aria-label="Discord">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Discord" aria-label="Discord">
                         <i class="fab fa-discord"></i>
                     </a>
-                    <a href="#" title="Telegram" aria-label="Telegram">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Telegram" aria-label="Telegram">
                         <i class="fab fa-telegram"></i>
                     </a>
-                    <a href="#" title="GitHub" aria-label="GitHub">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
