--- a/nft/index.html
+++ b/nft/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GILTON NFT CLP S1</title>
+    <title>GILTON NFT CLP</title>
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/favicon/favicon.ico" />
@@ -35,7 +35,7 @@
                 <img src="/metadata/clp/clp.png" alt="GILTON NFT Preview" class="nft-preview">
             </div>
             <div class="hero-text">
-                <h1>GILTON NFT CLP S1</h1>
+                <h1>GILTON NFT CLP</h1>
                 <p class="description">
                     GILTON NFT Community Liquidity Pool – Mint exclusive NFT to gain access to Community Liquidity Pool. 
                     Each NFT grants special privileges.
