--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S70EDW9WG5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-S70EDW9WG5');
-</script>
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/favicon/favicon.ico" />
@@ -485,7 +476,7 @@
 <body>
     <!-- Header Navigation -->
     <div class="header">
-        <a href="/" class="header-logo"><img src="/img/box.png" alt="GILTON Logo" class="logo-img"></a>
+        <a href="/" class="header-logo"><img src="/logo/logo.png" alt="GILTON Logo" class="logo-img"></a>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/tokenomics/">Tokenomics</a></li>
