--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Header Navigation -->
     <div class="header">
-        <a href="/" class="header-logo"><img src="/img/box.png" alt="GILTON Logo" class="logo-img"></a>
+        <a href="/" class="header-logo"><img src="/logo/logo.png" alt="GILTON Logo" class="logo-img"></a>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/tokenomics/">Tokenomics</a></li>
