--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
         <a href="/" class="header-logo"><img src="/logo/logo.png" alt="GILTON Logo" class="logo-img"></a>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
+            <li><a href="/nft">Test NFT</a></li>
             <li><a href="/tokenomics/">Tokenomics</a></li>
             <li><a href="/terms/">Terms</a></li>
         </ul>
